#83 Separate beds for military